feat: Establish initial user authentication, profile management, and admin registration functionality.

--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
 DATABASE_URL=postgresql://neondb_owner:npg_qkfmW5NpYP7X@ep-tiny-voice-a1a49fzy-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&options=endpoint%3Dep-tiny-voice-a1a49fzy
+APP_URL=http://localhost:9000
+ENVIRONMENT=development
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=todidiang@gmail.com
+SMTP_PASSWORD=qbltojnzqfywwyfg
+SMTP_FROM_EMAIL=todidiang@gmail.com
+SMTP_FROM_NAME=Koneko CTF
+PASSWORD_RESET_EXPIRY=3600
+ALLOWED_EMAIL_DOMAINS=gmail.com,binus.ac.id
