--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASE_URL=postgresql://neondb_owner:npg_qkfmW5NpYP7X@ep-tiny-voice-a1a49fzy-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&options=endpoint%3Dep-tiny-voice-a1a49fzy
 APP_URL=http://localhost:9000
-ENVIRONMENT=development
+ENVIRONMENT=production
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=todidiang@gmail.com
